--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     --card-name-color:#B4AD9E;
     --text-color:#626262 ;
 }
+body{
+    font-family: 'Playfair Display', serif;
+}
 ul{
     list-style: none;
 }
@@ -11,6 +14,7 @@ a{
     text-decoration: none;
 }
 .header-link{
+    font-size: 14px;
     color: var(--nav-color);
     text-transform: uppercase;
 }
@@ -19,6 +23,8 @@ a{
     color: var(--hover-color);
 }
 .card-name{
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 14px;
     color: var(--card-name-color);
     text-transform: uppercase;
 }
@@ -27,10 +33,15 @@ a{
     color: var(--text-color);
 }
 .card-text{
+    font-size: 14px;
     color: var(--text-color);
 }
 .button{
+    font-size: 14px;
     background-color:#fff ;
     color: var(--text-color);
     border: 1px solid var(--text-color);
+}
+.card-title{
+    font-size: 30px;
 }
