--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,15 @@
 body{
     font-family: 'Playfair Display', serif;
 }
+.container{
+    width: 936px;
+    margin: 0 auto;
+    padding: 0 15px;
+    border: 2px solid red;
+}
+.header{
+    padding-top: 71px;
+}
 .header-link{
     font-size: 14px;
     color: var(--nav-color);
@@ -15,6 +24,10 @@ body{
 .header-link:hover,
 .header-link:focus{
     color: var(--hover-color);
+}
+.main{
+    padding-top: 92px;
+    padding-bottom: 66px;
 }
 .card-name{
     font-family: 'Ubuntu', sans-serif;
