--- a/scss/base/_all-styles.scss
+++ b/scss/base/_all-styles.scss
@@ -17,7 +17,20 @@ button{
     border: none;
 }
 .container{
-    width: 936px;
+    width: 480px;
     margin: 0 auto;
     padding: 0 15px;
+}
+img{
+    width: 100%;
+}
+@media screen and (min-width: 768px){
+    .container{
+        width: 768px;
+    }
+}
+@media screen and (min-width: 1200px){
+    .container{
+        width: 1200px;
+    }
 }
